Add Stage-2 completion banner

--- a/notebooks/valuation_demo.ipynb
+++ b/notebooks/valuation_demo.ipynb
@@ -2,33 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a4722276-199d-46f4-bb7e-7471fcdcbd17",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdcf\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwacc\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcomps\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
-     ]
-    }
-   ],
-   "source": [
-    "from src.dcf import *\n",
-    "from src.wacc import *\n",
-    "from src.comps import *\n",
-    "from src.utils import *\n",
-    "\n",
-    "print(\"Imports loaded successfully.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "f44a628c-8143-4e4d-924a-694cd51d5bdf",
    "metadata": {},
@@ -750,9 +723,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfbcdf62-752d-4542-ba4e-f11c2cd03c48",
+   "metadata": {},
+   "source": [
+    "## Valuation Summary (Stage-2 Demo)\n",
+    "\n",
+    "This stage of the model demonstrates the valuation mechanics using illustrative inputs. At this stage, numbers are placeholders. In the next stage, the same framework will be populated with real ExxonMobil financials and market-derived WACC inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a70d5c4-9546-4dbd-9f87-79fb07416168",
+   "metadata": {},
+   "source": [
+    "## Current Status: \n",
+    "- **Stage 2:** Model logic validated using demo inputs. \n",
+    "- **Stage 3:** Load real ExxonMobil financials and market WACC."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351c2c4b-29c9-4736-ba55-15f97dc169f3",
+   "id": "30285761-48c1-4be7-8fae-7e302c41c692",
    "metadata": {},
    "outputs": [],
    "source": []
