Stage 11: finalize valuation notebook with exports and report generation

--- a/notebooks/valuation_demo.ipynb
+++ b/notebooks/valuation_demo.ipynb
@@ -2773,6 +2773,105 @@
     "\n",
     "lbo_xlsx_path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "b18f992f-d97a-41b2-8a69-6d563f01a3f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: ../docs/analyst_summary.md\n",
+      "Implied price: $70.45 | Spot: $115.98 | Mispricing: +65% (overvalued)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# ---- Inputs ----\n",
+    "spot_price = 115.98  # USD\n",
+    "as_of_str = \"December 2025\"\n",
+    "\n",
+    "# ---- Load model outputs (exported earlier) ----\n",
+    "df = pd.read_csv(\"../data/processed/xom_final_valuation.csv\")\n",
+    "row = df.iloc[0]\n",
+    "\n",
+    "wacc = float(row[\"wacc\"])\n",
+    "g_terminal = float(row[\"g_terminal\"])\n",
+    "ev_bn = float(row[\"enterprise_value_bn\"])\n",
+    "net_debt_bn = float(row[\"net_debt_bn\"])\n",
+    "equity_value_bn = float(row[\"equity_value_bn\"])\n",
+    "shares_bn = float(row[\"shares_outstanding_bn\"])\n",
+    "implied_price = float(row[\"implied_price_usd\"])\n",
+    "\n",
+    "mispricing_pct = (spot_price / implied_price - 1.0) * 100.0\n",
+    "over_under = \"overvalued\" if mispricing_pct > 0 else \"undervalued\"\n",
+    "\n",
+    "md = f\"\"\"# ExxonMobil (XOM) - Analyst Summary (Stage 9)\n",
+    "\n",
+    "**As of:** {as_of_str}  \n",
+    "**Universe:** Integrated Oil & Gas  \n",
+    "**Methodologies:** DCF (intrinsic), Trading Comps (relative), Precedents (range framing), Infrastructure-style LBO (sponsor lens)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Investment View\n",
+    "\n",
+    "Our intrinsic valuation framework (DCF) implies an equity value below the current spot price, indicating **{over_under} risk** under base-case assumptions. The market’s premium multiples suggest investors are pricing in durability and capital return momentum beyond what is embedded in conservative cash-flow forecasts.\n",
+    "\n",
+    "**Spot price (user input):** ${spot_price:,.2f}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Valuation Summary\n",
+    "\n",
+    "### 1) Intrinsic Value - DCF\n",
+    "- **WACC:** **{wacc*100:.2f}%**\n",
+    "- **Terminal growth:** **{g_terminal*100:.2f}%**\n",
+    "- **Enterprise Value (EV):** **${ev_bn:,.1f}bn**\n",
+    "- **Net debt:** **${net_debt_bn:,.1f}bn**\n",
+    "- **Equity value:** **${equity_value_bn:,.1f}bn**\n",
+    "- **Shares outstanding:** **{shares_bn:.3f}bn**\n",
+    "- **Implied value per share:** **${implied_price:,.2f}**\n",
+    "\n",
+    "**Market check:** XOM is currently **{over_under} by {abs(mispricing_pct):.0f}%** vs the DCF base case.\n",
+    "\n",
+    "![EV vs WACC](figures/ev_vs_wacc.png)\n",
+    "\n",
+    "### 2) Relative Value - Trading Comps (Stage 6)\n",
+    "\n",
+    "![Comps bar chart](figures/comps_multiples_bar.png)  \n",
+    "![FCF yield bar chart](figures/fcf_yield_bar.png)\n",
+    "\n",
+    "### 3) Precedent Transactions (Stage 7)\n",
+    "Precedent EV/EBITDA multiples provide a range-based check against intrinsic value. Results depend on deal mix, cycle point, and synergy expectations.\n",
+    "\n",
+    "### 4) Infrastructure-style LBO (Stage 8)\n",
+    "\n",
+    "![IRR sensitivity](figures/irr_sensitivity.png)\n",
+    "\n",
+    "A sponsor lens frames feasible leverage and equity IRR outcomes under conservative leverage and stable exit multiples. This is used as a plausibility bound rather than a primary valuation anchor.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Artifacts Produced\n",
+    "- **Models:** `models/dcf/`, `models/comps/`, `models/lbo/`\n",
+    "- **Final valuation export:** `data/processed/xom_final_valuation.csv`\n",
+    "- **Figures:** `docs/figures/`\n",
+    "\"\"\"\n",
+    "\n",
+    "os.makedirs(\"../docs\", exist_ok=True)\n",
+    "with open(\"../docs/analyst_summary.md\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(md)\n",
+    "\n",
+    "print(\"Wrote: ../docs/analyst_summary.md\")\n",
+    "print(f\"Implied price: ${implied_price:,.2f} | Spot: ${spot_price:,.2f} | Mispricing: {mispricing_pct:+.0f}% ({over_under})\")\n"
+   ]
   }
  ],
  "metadata": {
